Fix: compatibilidad con Java 17 y agregar dependencia JasperReports
- Cambiar versión de Java de 22 a 17 en pom.xml para compatibilidad con Maven
- Agregar dependencia de JasperReports 6.20.0
- Reemplazar getFirst() por get(0) para compatibilidad con Java 17
- Reemplazar getLast() por get(list.size()-1) para compatibilidad con Java 17
- Archivos modificados: ModelMain, ControllerManageLoan, ControllerManageBond,
  HistoryPayment, ReporteDeuda

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>